kubernetes/backend-deployment.yaml
# backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: jom-backend
spec:
 replicas: 2
 selector:
   matchLabels:
     app: jom-backend
 template:
   metadata:
     labels:
       app: jom-backend
   spec:
     containers:
     - name: backend
       image: lfds/jombackend:v9
       ports:
       - containerPort: 3000
